// Copyright 2000-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
apply plugin: 'java'

compileJava {
  sourceCompatibility '8'
  targetCompatibility '8'
}

sourceSets {
  main.java.srcDirs 'src'
  test.java.srcDirs 'test'
}

repositories { mavenCentral() }
dependencies {
  implementation 'org.jetbrains:annotations:20.1.0'
  implementation 'info.picocli:picocli:4.6.1'
  implementation 'org.apache.commons:commons-lang3:3.12.0'

  annotationProcessor 'info.picocli:picocli-codegen:4.6.1'

  testImplementation 'org.apache.commons:commons-text:1.9'
  testImplementation 'junit:junit:4.12'
  testImplementation 'org.assertj:assertj-core:3.12.2'
}

jar {
  archiveFileName = 'fernflower.jar'
  manifest {
    attributes 'Main-Class': 'org.jetbrains.java.decompiler.main.decompiler.ConsoleDecompilerStarter'
  }

  // Fat JAR
  from {
    configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) }
  }
}
